[gd_scene load_steps=25 format=3 uid="uid://bfk5etdpsrkpa"]

[ext_resource type="Script" path="res://GameScenes/main.gd" id="1_fb7b1"]
[ext_resource type="PackedScene" uid="uid://d0qiy71atm05d" path="res://UI/MainUI.tscn" id="2_02b52"]
[ext_resource type="PackedScene" uid="uid://bgsmy6ouxtl1e" path="res://Environment/IcePillar.tscn" id="3_yd3ns"]
[ext_resource type="PackedScene" uid="uid://da4v6pn7rkjeu" path="res://Environment/Wave.tscn" id="4_1sdf4"]
[ext_resource type="Texture2D" uid="uid://dyw5fqsbuejfo" path="res://Environment/Sky.png" id="5_gyye6"]
[ext_resource type="Texture2D" uid="uid://c55lo6ocegua1" path="res://Environment/Sun.png" id="6_p8asb"]
[ext_resource type="Texture2D" uid="uid://bj2gewdwdcxv5" path="res://Environment/Moon.png" id="7_jc84n"]
[ext_resource type="PackedScene" uid="uid://bilt772qof1fb" path="res://geode_spawner.tscn" id="8_awv6j"]
[ext_resource type="PackedScene" uid="uid://haq5aggch3tu" path="res://UI/BuildingPurchase.tscn" id="9_ec0rg"]
[ext_resource type="Script" path="res://Tutorial.gd" id="10_b1wis"]
[ext_resource type="Texture2D" uid="uid://cq7v0oi5ekfhx" path="res://UI/Images/Wood_Sign.png" id="11_huk4n"]
[ext_resource type="Texture2D" uid="uid://ctfw0afdrgst2" path="res://UI/Images/Wood_Sign_Arrow.png" id="12_sppxd"]
[ext_resource type="Texture2D" uid="uid://bc4jvv6p7hubk" path="res://UI/Images/Metal_Sign.png" id="13_rmcav"]

[sub_resource type="GDScript" id="GDScript_7pnhc"]
script/source = "extends Camera2D

var curr_target = null
@export var target_speed = 200
var curr_building = null
var mouse_down = null
var last_mouse_pos = null

func _process(delta):
	if curr_target != null:
		var dir = curr_target.global_position - global_position
	
		var to_target = dir.normalized() * target_speed * delta
		var reached = false
		if to_target.length() > dir.length():
			to_target = dir
			reached = true

		position += to_target

		if reached: curr_target = null

	var s = get_viewport_rect().size
	
	var b_size = Constants.BuildingController.BuildingDist
	limit_left = -Constants.BuildingController.count_left() * b_size - s.x/2
	limit_right = Constants.BuildingController.count_right() * b_size + s.x/2
	var gs = Constants.GeodeSpawner
	limit_bottom = gs.global_position.y + gs.lowest * gs.GeodeWidth + s.y/2
	position = Vector2(clampf(position.x, limit_left + s.x/2, limit_right - s.x/2), 
					   clampf(position.y, limit_top + s.y/2, limit_bottom - s.y/2))

	show_closest_building()

func _input(event):
	if curr_target:
		return
	if event is InputEventMouseMotion and mouse_down:
		if last_mouse_pos != null:
			var d = last_mouse_pos - event.position
			position += d
			#curr_target = null
		last_mouse_pos = event.position

func _unhandled_input(event):
	# Mouse in viewport coordinates.
	if event is InputEventMouseButton:
		if mouse_down and not event.pressed:
			last_mouse_pos = null
		mouse_down = event.pressed


func show_closest_building():
	var b = get_closest_building()
	if b == curr_building: return
	
	if curr_building != null:
		curr_building.unfocus()
	b.focus()
	curr_building = b

func check_type(buildings, closest = null):
	var dist = INF if closest == null else closest.position.x - position.x - closest.building_width / 2
	for b in buildings:
		var d = abs(b.position.x - position.x)
		
		if d <= b.building_width / 2: return b
		
		if d < dist:
			closest = b
			dist = d
			
	return closest
	
func get_closest_building():
	var closest = check_type(Constants.BuildingController.Mines)
	closest = check_type(Constants.BuildingController.Chutes, closest)
	return closest


func set_focus(target:Node2D):
	curr_target = target
"

[sub_resource type="GDScript" id="GDScript_r1mab"]
script/source = "extends Node2D

@export var path_tile : PackedScene

func _on_buildings_building_added(building_type, dir):
	if building_type == Constants.BUILDING.CHUTE: return
	
	var p = path_tile.instantiate()
	add_child(p)
	if dir == -1:
		p.position = Vector2(-240 * (Constants.BuildingController.count_left() + 1), 0)
	elif dir == 1:
		p.position = Vector2(240 * (Constants.BuildingController.count_right() + 1), 0)
"

[sub_resource type="GDScript" id="GDScript_3u6ko"]
script/source = "extends ParallaxBackground

@onready var sun_path = $Sun/Path2D/PathFollow2D
@onready var sun_img = $Sun/Path2D/PathFollow2D/Sun
@onready var moon_img = $Sun/Path2D/PathFollow2D/Moon

@onready var sky_img = $Sky/TextureRect

@export var sun_arc_duration = 60
@onready var curr_arc = randf() * sun_arc_duration / 2

@export var day_gradient : Gradient
@export var night_gradient : Gradient

var day = true

func _process(delta):	
	curr_arc += delta
	if curr_arc >= sun_arc_duration:
		curr_arc = 0
		day = !day
		sun_img.visible = day
		moon_img.visible = !day
		
	var t = curr_arc / sun_arc_duration
	sun_path.progress_ratio = t
	sky_img.self_modulate = day_gradient.sample(t) if day else night_gradient.sample(t)
"

[sub_resource type="Gradient" id="Gradient_7v57w"]
offsets = PackedFloat32Array(0, 0.0981595, 0.497143, 0.901841, 1)
colors = PackedColorArray(0.104524, 0.104524, 0.547521, 1, 0, 0.591339, 1, 1, 0.177751, 0.667334, 1, 1, 0, 0.487689, 0.819067, 1, 0, 0, 0.490196, 1)

[sub_resource type="Gradient" id="Gradient_j1lg6"]
offsets = PackedFloat32Array(0, 0.349693, 0.895706, 1)
colors = PackedColorArray(0, 0, 0.490196, 1, 0, 0.010952, 0.201299, 1, 0, 0.00392157, 0.270588, 1, 0.105882, 0.105882, 0.54902, 1)

[sub_resource type="Curve2D" id="Curve2D_pcspu"]
_data = {
"points": PackedVector2Array(148.489, 166.291, -150, -150, 800, 300, 300, 0, -300, 0, 0, 30, 150, -150, -423.002, 257.863, -800, 300)
}
point_count = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u578v"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v2u2p"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1c4gy"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vhom"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q6ctq"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Main" type="Node2D"]
script = ExtResource("1_fb7b1")
start_coins = 50
start_gold = 10

[node name="AutosaveTimer" type="Timer" parent="."]
wait_time = 300.0
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = -1000
limit_top = -300
limit_right = 1000
limit_bottom = 1000
editor_draw_limits = true
script = SubResource("GDScript_7pnhc")
target_speed = 5000

[node name="MainUI" parent="Camera2D" instance=ExtResource("2_02b52")]

[node name="Environment" type="Node2D" parent="."]

[node name="MineBackground" type="ParallaxBackground" parent="Environment"]
layer = -128

[node name="Cavern" type="ParallaxLayer" parent="Environment/MineBackground"]
z_index = -100
motion_scale = Vector2(0, 0)

[node name="TextureRect" type="TextureRect" parent="Environment/MineBackground/Cavern"]
self_modulate = Color(0.603922, 0.980392, 1, 1)
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("5_gyye6")

[node name="StaticPath" type="Node2D" parent="Environment"]
position = Vector2(0, 29)
scale = Vector2(3, 1)
script = SubResource("GDScript_r1mab")
path_tile = ExtResource("3_yd3ns")

[node name="Pillar" parent="Environment/StaticPath" instance=ExtResource("3_yd3ns")]

[node name="Pillar2" parent="Environment/StaticPath" instance=ExtResource("3_yd3ns")]
position = Vector2(240, 0)

[node name="Pillar3" parent="Environment/StaticPath" instance=ExtResource("3_yd3ns")]
position = Vector2(-240, 0)

[node name="Water" type="ParallaxBackground" parent="Environment"]
scroll_base_offset = Vector2(0, -260)

[node name="Wave3" parent="Environment/Water" instance=ExtResource("4_1sdf4")]
modulate = Color(0.780392, 0.780392, 0.780392, 1)
z_index = -77
position = Vector2(0, 178)
motion_scale = Vector2(0.6, 0.75)
max_wave_offset = 4.0

[node name="Wave2" parent="Environment/Water" instance=ExtResource("4_1sdf4")]
modulate = Color(0.878431, 0.878431, 0.878431, 1)
z_index = -76
position = Vector2(0, 195)
motion_scale = Vector2(0.7, 0.85)
max_wave_offset = 4.0
start_up = false

[node name="Wave" parent="Environment/Water" instance=ExtResource("4_1sdf4")]
position = Vector2(0, 212)
motion_scale = Vector2(0.8, 0.95)
max_wave_offset = 4.0

[node name="Sky" type="ParallaxBackground" parent="Environment"]
layer = -128
script = SubResource("GDScript_3u6ko")
day_gradient = SubResource("Gradient_7v57w")
night_gradient = SubResource("Gradient_j1lg6")

[node name="Sky" type="ParallaxLayer" parent="Environment/Sky"]
z_index = -100
position = Vector2(0, -648)
motion_scale = Vector2(0, 1)

[node name="TextureRect" type="TextureRect" parent="Environment/Sky/Sky"]
self_modulate = Color(0.356863, 0.486275, 0.933333, 1)
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("5_gyye6")

[node name="Sun" type="ParallaxLayer" parent="Environment/Sky"]
z_index = -80
motion_scale = Vector2(0.1, 0.3)
motion_offset = Vector2(0, -100)

[node name="Path2D" type="Path2D" parent="Environment/Sky/Sun"]
position = Vector2(576, 0)
curve = SubResource("Curve2D_pcspu")

[node name="PathFollow2D" type="PathFollow2D" parent="Environment/Sky/Sun/Path2D"]
position = Vector2(-800, 300)
rotation = 2.35619
progress = 1822.99

[node name="Sun" type="TextureRect" parent="Environment/Sky/Sun/Path2D/PathFollow2D"]
offset_right = 500.0
offset_bottom = 500.0
rotation = 3.14159
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_p8asb")

[node name="Moon" type="TextureRect" parent="Environment/Sky/Sun/Path2D/PathFollow2D"]
visible = false
offset_right = 500.0
offset_bottom = 500.0
rotation = 3.14159
scale = Vector2(0.2, 0.2)
texture = ExtResource("7_jc84n")

[node name="GeodeSpawner" parent="Environment" instance=ExtResource("8_awv6j")]
position = Vector2(0, 140)
MinGoldLayer = 5

[node name="Buildings" parent="." instance=ExtResource("9_ec0rg")]
offset_left = 0.0
offset_top = 0.0
offset_right = 40.0
offset_bottom = 40.0
BuildingDist = 240.0

[node name="Tutorial" type="Control" parent="."]
z_index = 50
layout_mode = 3
anchors_preset = 0
script = ExtResource("10_b1wis")

[node name="BuyMine" type="Control" parent="Tutorial"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -245.0
offset_top = -253.0
offset_right = -245.0
offset_bottom = -253.0

[node name="TextureRect" type="TextureRect" parent="Tutorial/BuyMine"]
layout_mode = 0
offset_right = 230.0
offset_bottom = 120.0
texture = ExtResource("11_huk4n")
expand_mode = 1

[node name="Label" type="Label" parent="Tutorial/BuyMine/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
text = "Welcome to PikPeng! 
To start, click this button to buy a mine "
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TextureRect2" type="TextureRect" parent="Tutorial/BuyMine"]
layout_mode = 0
offset_left = -29.0
offset_top = 130.0
offset_right = 71.0001
offset_bottom = 180.0
rotation = -1.5708
texture = ExtResource("12_sppxd")
expand_mode = 1

[node name="SelectMine" type="Control" parent="Tutorial"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -399.0
offset_top = 72.0
offset_right = -399.0
offset_bottom = 72.0

[node name="TextureRect" type="TextureRect" parent="Tutorial/SelectMine"]
layout_mode = 0
offset_top = 93.0
offset_right = 300.0
offset_bottom = 243.0
texture = ExtResource("11_huk4n")
expand_mode = 1

[node name="Label" type="Label" parent="Tutorial/SelectMine/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
text = "Mines start out with a Peng working, but lets hire a second one so he's not lonely."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TextureRect2" type="TextureRect" parent="Tutorial/SelectMine"]
layout_mode = 0
offset_left = 327.0
offset_top = 93.0
offset_right = 627.0
offset_bottom = 243.0
texture = ExtResource("11_huk4n")
expand_mode = 1
flip_v = true

[node name="Label" type="Label" parent="Tutorial/SelectMine/TextureRect2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
text = "Click and drag to move the camera, or click on the mine to snap to it"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="CollectGeode" type="Control" parent="Tutorial"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -636.0
offset_top = -56.0
offset_right = -636.0
offset_bottom = -56.0

[node name="TextureRect" type="TextureRect" parent="Tutorial/CollectGeode"]
layout_mode = 0
offset_left = 76.0
offset_top = 222.0
offset_right = 376.0
offset_bottom = 372.0
texture = ExtResource("11_huk4n")
expand_mode = 1

[node name="Label" type="Label" parent="Tutorial/CollectGeode/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
text = "Your new Peng will start mining Geodes for you, 
and bring them up to the mine"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TextureRect2" type="TextureRect" parent="Tutorial/CollectGeode"]
layout_mode = 0
offset_left = 397.0
offset_top = 222.0
offset_right = 697.0
offset_bottom = 372.0
texture = ExtResource("11_huk4n")
expand_mode = 1
flip_h = true
flip_v = true

[node name="Label" type="Label" parent="Tutorial/CollectGeode/TextureRect2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
text = "While you wait hover your mouse over upgrades to learn more about them"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="SelectChute" type="Control" parent="Tutorial"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -671.0
offset_top = -56.0
offset_right = -671.0
offset_bottom = -56.0

[node name="TextureRect" type="TextureRect" parent="Tutorial/SelectChute"]
layout_mode = 0
offset_left = 263.0
offset_top = -220.0
offset_right = 588.0
offset_bottom = -70.0
texture = ExtResource("11_huk4n")
expand_mode = 1

[node name="Label" type="Label" parent="Tutorial/SelectChute/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
text = "Mines will generate some Pencoins when geodes are deposited, but we can make even more by processing the geodes"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TextureRect2" type="TextureRect" parent="Tutorial/SelectChute"]
layout_mode = 0
offset_left = 667.0
offset_top = -195.0
offset_right = 887.0
offset_bottom = -95.0
texture = ExtResource("11_huk4n")
expand_mode = 1
flip_v = true

[node name="Label" type="Label" parent="Tutorial/SelectChute/TextureRect2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
text = "Click on the Chute to hire another Peng"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TextureRect" type="TextureRect" parent="Tutorial/SelectChute/TextureRect2"]
layout_mode = 0
offset_left = -22.0
offset_top = 122.0
offset_right = 78.0
offset_bottom = 172.0
rotation = -1.5708
texture = ExtResource("12_sppxd")
expand_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="Tutorial"]
layer = 5

[node name="OpenUpgrades" type="Control" parent="Tutorial/CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 93.0
offset_top = 226.0
offset_right = 93.0
offset_bottom = 226.0

[node name="TextureRect" type="TextureRect" parent="Tutorial/CanvasLayer/OpenUpgrades"]
layout_mode = 0
offset_left = -48.0
offset_top = -25.0
offset_right = 212.0
offset_bottom = 95.0
texture = ExtResource("11_huk4n")
expand_mode = 1

[node name="Label" type="Label" parent="Tutorial/CanvasLayer/OpenUpgrades/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
text = "Press this button to view this buildings available upgrades"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TextureRect2" type="TextureRect" parent="Tutorial/CanvasLayer/OpenUpgrades"]
layout_mode = 0
offset_left = -21.0
offset_top = -51.0
offset_right = 79.0
offset_bottom = -1.0
texture = ExtResource("12_sppxd")
expand_mode = 1
flip_v = true

[node name="BuyPeng" type="Control" parent="Tutorial/CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 382.0
offset_top = 179.0
offset_right = 382.0
offset_bottom = 179.0

[node name="TextureRect" type="TextureRect" parent="Tutorial/CanvasLayer/BuyPeng"]
layout_mode = 0
offset_left = -48.0
offset_top = -25.0
offset_right = 172.0
offset_bottom = 75.0
texture = ExtResource("11_huk4n")
expand_mode = 1

[node name="Label" type="Label" parent="Tutorial/CanvasLayer/BuyPeng/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
text = "Click 'Peng Count' to hire a new Miner!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TextureRect2" type="TextureRect" parent="Tutorial/CanvasLayer/BuyPeng"]
layout_mode = 0
offset_left = -21.0
offset_top = 53.0
offset_right = 79.0
offset_bottom = 103.0
texture = ExtResource("12_sppxd")
expand_mode = 1
flip_v = true

[node name="BuyPeng2" type="Control" parent="Tutorial/CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 384.0
offset_top = 217.0
offset_right = 384.0
offset_bottom = 217.0

[node name="TextureRect" type="TextureRect" parent="Tutorial/CanvasLayer/BuyPeng2"]
layout_mode = 0
offset_left = -48.0
offset_top = -25.0
offset_right = 172.0
offset_bottom = 75.0
texture = ExtResource("11_huk4n")
expand_mode = 1

[node name="Label" type="Label" parent="Tutorial/CanvasLayer/BuyPeng2/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
text = "Click 'Peng Count' to hire a hauler!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TextureRect3" type="TextureRect" parent="Tutorial/CanvasLayer/BuyPeng2"]
layout_mode = 0
offset_left = 209.0
offset_top = -27.0
offset_right = 489.0
offset_bottom = 113.0
texture = ExtResource("11_huk4n")
expand_mode = 1
flip_h = true
flip_v = true

[node name="Label" type="Label" parent="Tutorial/CanvasLayer/BuyPeng2/TextureRect3"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
text = "They fetch geodes from mines
and bring them to the chute for processing"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TextureRect2" type="TextureRect" parent="Tutorial/CanvasLayer/BuyPeng2"]
layout_mode = 0
offset_left = -21.0
offset_top = 53.0
offset_right = 79.0
offset_bottom = 103.0
texture = ExtResource("12_sppxd")
expand_mode = 1
flip_v = true

[node name="OpenGoldUpgrades" type="Control" parent="Tutorial/CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 877.0
offset_top = 228.0
offset_right = 877.0
offset_bottom = 228.0

[node name="TextureRect" type="TextureRect" parent="Tutorial/CanvasLayer/OpenGoldUpgrades"]
layout_mode = 0
offset_left = -48.0
offset_top = -25.0
offset_right = 212.0
offset_bottom = 95.0
texture = ExtResource("11_huk4n")
expand_mode = 1

[node name="Label" type="Label" parent="Tutorial/CanvasLayer/OpenGoldUpgrades/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
text = "You can also use gold on upgrades that effect all buildings here"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TextureRect2" type="TextureRect" parent="Tutorial/CanvasLayer/OpenGoldUpgrades"]
layout_mode = 0
offset_left = 86.0
offset_top = -51.0
offset_right = 186.0
offset_bottom = -1.0
texture = ExtResource("12_sppxd")
expand_mode = 1
flip_h = true
flip_v = true

[node name="BuyShoes" type="Control" parent="Tutorial/CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 608.0
offset_top = 262.0
offset_right = 608.0
offset_bottom = 262.0

[node name="TextureRect" type="TextureRect" parent="Tutorial/CanvasLayer/BuyShoes"]
layout_mode = 0
offset_left = -48.0
offset_top = -25.0
offset_right = 212.0
offset_bottom = 95.0
texture = ExtResource("11_huk4n")
expand_mode = 1

[node name="Label" type="Label" parent="Tutorial/CanvasLayer/BuyShoes/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
text = "Click 'Peng Shoes' to make all your Pengs faster!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TextureRect2" type="TextureRect" parent="Tutorial/CanvasLayer/BuyShoes"]
layout_mode = 0
offset_left = 86.0
offset_top = -51.0
offset_right = 186.0
offset_bottom = -1.0
texture = ExtResource("12_sppxd")
expand_mode = 1
flip_h = true
flip_v = true

[node name="Completed" type="Control" parent="Tutorial/CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Tutorial/CanvasLayer/Completed"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -70.0
offset_right = 140.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_huk4n")
expand_mode = 1

[node name="Label" type="Label" parent="Tutorial/CanvasLayer/Completed/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
text = "You've completed the tutorial! Now go make your Pengs proud!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ReturnToSurface" type="Button" parent="Tutorial/CanvasLayer/Completed/TextureRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -93.0
offset_top = -32.0
offset_right = 64.95
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.135, 1.135)
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.247059, 0.403922, 0.407843, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0.392157, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_u578v")
theme_override_styles/hover = SubResource("StyleBoxFlat_v2u2p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1c4gy")
theme_override_styles/disabled = SubResource("StyleBoxFlat_5vhom")
theme_override_styles/focus = SubResource("StyleBoxFlat_q6ctq")
text = "Let's go!"

[node name="TextureRect" type="NinePatchRect" parent="Tutorial/CanvasLayer/Completed/TextureRect/ReturnToSurface"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -2.0
offset_right = 300.995
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.355, 0.355)
texture = ExtResource("13_rmcav")
patch_margin_left = 25
patch_margin_top = 25
patch_margin_right = 25
patch_margin_bottom = 25

[connection signal="timeout" from="AutosaveTimer" to="." method="_on_autosave_timeout"]
[connection signal="building_added" from="Buildings" to="Environment/StaticPath" method="_on_buildings_building_added"]
[connection signal="building_created" from="Buildings" to="Environment/StaticPath" method="_on_buildings_building_added"]
[connection signal="building_created" from="Buildings" to="Environment/GeodeSpawner" method="_on_buildings_building_created"]
[connection signal="pressed" from="Tutorial/CanvasLayer/Completed/TextureRect/ReturnToSurface" to="Tutorial" method="_on_tutorial_completed"]
